Add button to register on home page, add question to update registration in edit profile, update some style on profile

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="field-radio">
       <%= f.radio_button(:register2019, "jobfaironly") %>
-      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administartor Job Fair only. (Note: Your resume is required in order to register you for the fair, but we will not include it in our online database if you select this option. This means hiring managers will not receive your resume in advance of the Job Fair.)", class: 'flex-one') %>
+      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair only. (Note: Your resume is required in order to register you for the fair, but we will not include it in our online database if you select this option. This means hiring managers will not receive your resume in advance of the Job Fair.)", class: 'flex-one') %>
     </div>
   </div>
 
