Fix location display

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -66,8 +66,8 @@ managers year-round.</li>
 
     <p class="main-content"><strong>Location:</strong></p>
     <p class="main-content">
-      ITW David Speer Academy, a campus of the Noble Network of Charter Schools
-      5321 W. Grand Ave, Chicago, IL 60639
+    ITW David Speer Academy, a campus of the Noble Network of Charter Schools<br>
+    5321 W. Grand Ave<br> Chicago, IL 60639
     </p>
 
     <p class="main-content"><strong>Parking:</strong></p>
