Complete Home Page additional edits

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,7 @@
     </div>
   <% end %>
   <h1 class="main-header">Welcome to the INCS Online Resume Bank.</h1>
-  <h1 class="main-header">Please join us at the 2019 INCS Teacher & Administrator Job Fair on April 6!</h1>
+  <h1 class="main-header">Join us at the 2019 INCS Teacher & Administrator Job Fair on April 6!</h1>
   <h3 class="sub-header">Register for the Job Fair and Resume Bank below.</h3>
 
 
@@ -28,7 +28,7 @@
 
   <p class="main-content">
     <p class="main-content">
-    The Illinois Network of Charter Schools (INCS) will host the Teacher & Administrator Job Fair on <span class="boldBig">Saturday, April 6, 2019</span>. Representatives from charter public schools across Illinois will be recruiting hundreds of teachers, social workers, counselors, nurses, and school administrators. INCS seeks highly-qualified candidates who are excited to work in a mission-driven environment and are ready to TEACH, LEAD, and SUCCEED. To register for the job fair and upload your resume into our year-round database, please select “Job Seeker Registration” above.
+    The Illinois Network of Charter Schools (INCS) will host our annual Teacher & Administrator Job Fair on <span class="boldBig">Saturday, April 6, 2019</span>. Meet leaders from charter public schools across Illinois who are seeking hundreds of teachers, social workers, counselors, nurses, and school administrators, among other roles. If you&apos;re a highly-qualified candidate ready to TEACH,  LEAD and SUCCEED in a mission-driven public school, this is the place to be!
     </p>
     <br>
 
@@ -38,7 +38,7 @@
         <li>Meet recruiters from over 50 charter public schools.</li>
         <li>Post your resume in the INCS Online Resume Bank, which is circulated to Illinois charter school hiring
 managers year-round.</li>
-        <li>Interview on-site with schools looking to hire exceptional talent.</li>
+        <li>Interview on-site with schools looking to hire exceptional talent.*</li>
       </ul>
     </p>
 
@@ -54,14 +54,14 @@ managers year-round.</li>
 
     <p class="main-content"><strong>Agenda:</strong></p>
     <ul class="main-content-list">
-      <li>9:00 am - 9:30 am: School set-up</li>
-      <li>9:15 am - 10:00 am: Job Seeker registration</li>
+      <li>9:00 am - 9:30 am: School Set-up</li>
+      <li>9:15 am - 10:00 am: Job Seeker Registration</li>
       <li>10:00 am - 12:00 pm: Meet-and-Greet between Job Seekers and Schools</li>
       <li>12:00 pm - 1:30 pm: On-site Interviews (by invitation from charter school leaders only*)</li>
     </ul>
 
     <p class="main-content">
-    *Interviews are conducted at the discretion of charter school leaders, who may contact job seekers in advance or invite them in person after the Meet-and-Greet portion of the fair. INCS does not have any additional information to share regarding interviews.
+    *Interviews are conducted at the discretion of charter school leaders, who may contact job seekers in advance or invite them in person at the fair. INCS does not have any additional information regarding interviews.
     </p>
 
     <p class="main-content"><strong>Location:</strong></p>
@@ -72,7 +72,7 @@ managers year-round.</li>
 
     <p class="main-content"><strong>Parking:</strong></p>
     <p class="main-content">
-      Parking is available on Grand Avenue and in the Prosser Career Academy parking lot, across from Speer Academy. 
+      Parking is available on Grand Avenue and in the Prosser Career Academy parking lot, on the north side of Grand, just west of Long Avenue.
     </p>
     <br>
 
