More teacher form updates

--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div class="field-radio">
       <%= f.radio_button(:register2019, "jobfaironly") %>
-      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair only. (Note: Your resume is required in order to register you for the fair, but we will not include it in our online database if you select this option. This means hiring managers will not receive your resume in advance of the Job Fair.)", class: 'flex-one') %>
+      <%= f.label(:name, "Register for the 2019 INCS Teacher & Administrator Job Fair only. (Note: Your resume is required in order to register you for the fair, but it will not be included in our online database or shared with hiring managers in advance of the Job Fair.)", class: 'flex-one') %>
     </div>
   </div>
 
@@ -100,7 +100,7 @@
   </div><br><br>
 
   <div class="field">
-    <label><em class="label-bold">How did you hear about the INCS Resume Bank? (Check all that apply)</em></label><br>
+    <label><em class="label-bold">How did you hear about the INCS Resume Bank? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
       <% resume_bank_references.each do |source| %>
         <% if @user.sources.map{|source| source.source_name}.include?(source) %>
@@ -130,7 +130,7 @@
   <br>
 
   <div class="field field-flex">
-    <em class="teacher-label2"><%= f.label :degree %></em>
+    <em class="teacher-label2"><%= f.label(:name, "Highest Degree Earned") %></em>
     <%= f.select :degree, options_for_select(degrees),{}, class: 'form-control' %>
   </div><br>
 
@@ -140,7 +140,7 @@
   </div><br>
 
   <div class="field">
-    <em class="label-bold"><%= f.label :masters_concentration, :class => "teacher-label2" %></em>
+    <em class="label-bold teacher-label2"><%= f.label(:name, "Graduate Degree Concentration") %></em>
     <%= f.text_field :masters_concentration %>
   </div><br>
 
@@ -247,12 +247,12 @@
   </div><br>
 
   <div class="field field-flex">
-    <em class="teacher-label3"><%= f.label(:name, "Preferred Grade Level") %></em>
+    <em class="teacher-label3"><%= f.label(:name, "Preferred Grade Level *") %></em>
     <%= f.select :grade_pref, options_for_select(grades, @user.grade_pref),{}, class: 'form-control form-control-small' %>
   </div><br>
 
   <div class="field field5">
-    <em class="label-bold"><%= f.label(:location_pref, "Where are you willing to teach?") %></em><br>
+    <em class="label-bold"><%= f.label(:location_pref, "Where are you willing to work? *") %></em><br>
     <div class="field-radio">
       <%= f.radio_button(:location_pref, "Chicago") %>
       <%= f.label(:name, "Chicago") %><br>
@@ -269,7 +269,7 @@
 
   <div class="field">
     <em class="label-bold">
-    <%= f.label(:name, "Do you have previous experience in a charter?") %></em><br>
+    <%= f.label(:name, "Do you have previous experience in a charter? *") %></em><br>
     <div class="field-radio">
       <%= f.radio_button(:previous, true) %>
       <%= f.label(:name, "Yes") %><br>
@@ -327,6 +327,7 @@
 
   <div class="field field8">
     <em class="label-bold"><%= f.label(:name, "Additional information") %></em><br>
+    <%= f.label(:name, "(Optional.) Please briefly provide additional relevant information, if desired. Do not include Cover Letter here. (You may upload a Cover Letter on the next page, if desired.)") %><br>
     <%= f.text_area :additional, cols: "100", rows: "10" %>
   </div><br>
 
