--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -76,6 +76,7 @@
 
 <% if @current_user.access == "admin" || (@current_user.access == "teacher" && @current_user.id == @user.id) %>
   <div class="actions">
+    <%= button_to "Return to Home Page", root_path, :class => "btn btn-info btn-deactivate", :method => :get %>
     <%= button_to "Edit Information", edit_user_path, :class => "btn btn-primary", :method => :get %>
     <%= button_to "Delete Profile", @user, :class => "btn btn-danger", :method => :delete, :confirm => 'Are you sure you want to remove yourself from the INCS Resume Bank?' %>
   </div>
