--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <% end %>
     </ul>
     <div class="banner">
-      <%= image_tag("banner.png", width:"100%") %>
+      <%= image_tag("banner.jpg", width:"100%") %>
     </div>
     </nav>
   <div class="container" style="padding-top:80px;">
