Add alevybrown@incschools.org to email recipients, add hiring manager stuff

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,6 +45,17 @@ p {
   color: #717171;
 }
 
+.register-content-list {
+  font-size: 1em;
+  color: #000;
+}
+
+.register-header{
+  text-align: center;
+  align-self: center;
+  width: 66%;
+}
+
 .label-align {
   position: relative;
   left: 16px;
