--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @users.each do |user| %>
 <div class="result">
-  <label>Name:</label> <%= user.prefix %> <%= user.first_name %> <%= user.last_name %><br>
+  <label>Name:</label> <%= user.prefix == 'N/A' ? '' : user.prefix %> <%= user.first_name %> <%= user.last_name %><br>
   <label>Years of Experience: </label> <%= user.years %><br>
   <label>Licenses Held:</label> <%= user.licenses.map do |lic| lic.name end.join(', ') %><br>
   <label>Registered for 2019 Job Fair:</label> <% if user.register2019 == "both" || user.register2019 == "jobfaironly" %>Yes<% else %>No<%end%><br>
